# qcp-omics

./: .gitignore  Dockerfile  README.md  pyproject.toml  tox.ini  tox.toml
.github/workflows/: tests.yaml
sandbox/: ldl_hdl.ipynb
sandbox/data/: clinDat.csv
src/qcp_omics/: analysis_mixin.py  clinical_data.py  genomics_data.py  omics_data.py  preprocessing_mixin.py  proteomics_data.py  qc_mixin.py
src/qcp_omics/cli/: cli.py  config.yaml  handle_execution.py  input_validation.py  interactive.py  main.py  metadata.py  utils.py
src/qcp_omics/mixins/: analysis_mixin.py  preprocessing_mixin.py  qc_mixin.py  visualization_mixin.py
src/qcp_omics/models/: clinical_data.py  genomics_data.py  omics_data.py  proteomics_data.py
src/qcp_omics/report_generation/: generate_report.py  report_step.py
src/qcp_omics/report_generation/templates/: report_template.html  report_template.jinja
src/qcp_omics/report_generation/templates/analysis/: pairwise_correlations_numerical.jinja
src/qcp_omics/report_generation/templates/common/: table_view.jinja  table_view_cat.jinja  table_view_num.jinja
src/qcp_omics/report_generation/templates/preprocessing/: transform_features.jinja
src/qcp_omics/utils/: protocols.py  utils.py
tests/test_cli/: test_input_model.py  test_interactive.py  test_main_cli.py  test_metadata.py
tests/test_mixins/: test_analysis_mixin.py  test_preprocessing_mixin.py  test_qc_mixin.py  test_visualization_mixin.py
tests/test_models/: test_omics_data.py
tests/test_utils/: test_utils.py
(+4 files in other folders)
